Working tests under debug
- Modified tests to work under current dev